<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">andorid-tensorflow-detection</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="baudRate">Baud rate</string>
    <string-array name="baud_rate_1">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>
    <string-array name="baud_rate_2">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="data_bits">
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="parity">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item>Mark</item>
        <item>Space</item>
    </string-array>
    <string-array name="flow_control">
        <item>None</item>
        <item>CTS/RTS</item>
        <item>DTR/DSR</item>
        <item>XOFF/XON</item>
    </string-array>
    <string-array name="port_list_1">
        <item>0</item>
    </string-array>
    <string-array name="port_list_2">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="port_list_3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="port_list_4">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="port_list_5">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="port_list_6">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="port_list_7">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="port_list_8">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="action_settings">action_settings</string>
    <string name="openwnn_system_dictionary_japanese">/data/data/com.googlecode.openwnn.legacy/lib/libWnnJpnDic.so</string>
    <string name="openwnn_writable_dictionary_japanese">/data/data/com.googlecode.openwnn.legacy/writableJAJP.dic</string>
    <string name="openwnn_system_dictionary_english">/data/data/com.googlecode.openwnn.legacy/lib/libWnnEngDic.so</string>
    <string name="openwnn_writable_dictionary_english">/data/data/com.googlecode.openwnn.legacy/writableEN.dic</string>
    <string name="preference_ime_setting_app">Setting</string>
    <string name="preference_key_setting_menu">Software Keyboard</string>
    <string name="preference_key_sound_title"> Sound on Key Press </string>
    <string name="preference_key_sound_summary"> Enable key click sound. </string>
    <string name="preference_key_vibration_title"> Vibrate on Key Press </string>
    <string name="preference_key_vibration_summary"> Enable key click vibration. </string>
    <string name="preference_preview_title"> Key Preview </string>
    <string name="preference_preview_summary"> Enable key preview. </string>
    <string name="preference_auto_caps_title"> Auto Capitalization </string>
    <string name="preference_auto_caps_summary"> Automatically capitalize the 1st char of a sentence in alphabet mode. </string>
    <string name="preference_keyboard_skin_title">Keyboard Image</string>
    <string name="preference_keyboard_skin_summary">Change keyboard image.</string>
    <string name="preference_keyboard_android_default">Standard</string>
    <string name="preference_keyboard_simple">Simple</string>
    <string name="preference_keyboard_metal">Metal</string>
    <string name="preference_conversion_menu">Conversion</string>
    <string name="preference_prediction_title">Word Prediction</string>
    <string name="preference_prediction_summary">Display predicted words as conversion candidates.</string>
    <string name="preference_correct_spell_title">Typing Error Correction</string>
    <string name="preference_correct_spell_summary">Display predicted words for correcting typing error.</string>
    <string name="preference_input_learning_title">Input Word Learning</string>
    <string name="preference_input_learning_summary">Learn input words.</string>
    <string name="preference_aboutime_menu"> About IME </string>
    <string name="preference_dictionary_menu"> Dictionary </string>
    <string name="preference_dictionary_menu_ja"> Japanese User Dictionary </string>
    <string name="preference_dictionary_menu_en"> English User Dictionary </string>
    <string name="preference_dictionary_menu_zhcn"> Chinese User Dictionary </string>
    <string name="preference_user_dictionary">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_title">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_summary">List/add/edit/delete words in user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_ja">List/add/edit/delete words in Japanese user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_en">List/add/edit/delete words in English user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_zhcn">List/add/edit/delete words in Chinese user dictionary.</string>
    <string name="preference_user_dictionary_clear_learning_title">Clear Learning Dictionary</string>
    <string name="preference_user_dictionary_clear_learning_summary">Remove all words from learning dictionary.</string>
    <string name="preference_user_dictionary_clear_user_title">Clear User Dictionary</string>
    <string name="preference_user_dictionary_clear_user_summary">Remove all words from user dictionary.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_clear_user_dictionary_message">Clear user dictionary?</string>
    <string name="dialog_clear_learning_dictionary_message">Clear learning dictionary?</string>
    <string name="dialog_clear_user_dictionary_done">Cleared.</string>
    <string name="dialog_clear_learning_dictionary_done">Cleared.</string>
    <string name="user_dictionary_list_words">Registered words</string>
    <string name="user_dictionary_list_words_en">Registered words in English User Dic</string>
    <string name="user_dictionary_list_words_ja">Registered words in Japanese User Dic</string>
    <string name="user_dictionary_list_words_zhcn">Registered words in Chinese User Dic</string>
    <string name="user_dictionary_edit_words">Edit</string>
    <string name="user_dictionary_title_read">Reading</string>
    <string name="user_dictionary_title_candidate">Word</string>
    <string name="user_dictionary_add">Add</string>
    <string name="user_dictionary_edit">Edit</string>
    <string name="user_dictionary_delete">Delete</string>
    <string name="user_dictionary_delete_confirm">Delete the selected word?</string>
    <string name="user_dictionary_delete_complete">Deleted.</string>
    <string name="user_dictionary_delete_fail">Fail to delete it</string>
    <string name="user_dictionary_words_duplication_message">Already registered.</string>
    <string name="user_dictionary_over_max_text_size_message">Length of the string exceeds the limit.</string>
    <string name="user_dictionary_creating_wordlist">Loading</string>
    <string name="user_dictionary_init">Initialize?</string>
    <string name="user_dictionary_prev_button">　≪　</string>
    <string name="user_dictionary_next_button">　≫　</string>
    <string name="openwnn_english_copyright">Ver.1.0.0\Scpark , Ltd.</string>
    <string name="openwnn_english">OpenWnn English</string>
    <string name="openwnn_english_system_dictionary">/data/data/com.googlecode.openwnn.legacy/lib/libWnnEngDic.so</string>
    <string name="openwnn_english_writable_dictionary">/data/data/com.googlecode.openwnn.legacy/writableEN.dic</string>
    <string name="en_word_separators">.,;:!?</string>
    <string name="openwnn_japanese_copyright">Ver.1.3.1\Scpark , Ltd.</string>
    <string name="openwnn_japanese">Japanese IME</string>
    <string name="openwnn_japanese_system_dictionary">/data/data/com.googlecode.openwnn.legacy/lib/libWnnJpnDic.so</string>
    <string name="openwnn_japanese_writable_dictionary">/data/data/com.googlecode.openwnn.legacy/writableJAJP.dic</string>
    <string name="openwnn_chinese_copyright">Ver.1.3.1\Scpark, Ltd.</string>
    <string name="openwnn_chinese">Blue Chinese</string>
    <string name="openwnn_chinese_system_dictionary">/data/data/com.googlecode.openwnn.legacy/lib/libWnnZHCNDic.so</string>
    <string name="openwnn_chinese_writable_dictionary">/data/data/com.googlecode.openwnn.legacy/writableZHCN.dic</string>
    <string name="cn_word_separators">.,;:!?</string>
    <string name="button_candidate_select">Select</string>
    <string name="button_candidate_delete">Delete learning?</string>
    <string name="button_candidate_cancel">Close</string>
    <string name="key_left_arrow">↤</string>
    <string name="key_right_arrow">↦</string>
    <string name="key_space">スペース</string>
    <string name="key_space_conv">スペース/変換</string>
    <string name="key_change_mode">文字</string>
    <string name="key_convert">変換</string>
    <string name="key_switch_keyboard">KBD</string>
    <string name="key_12key_A">゛゜ 大小</string>
    <string name="key_12key_kutoten">、。</string>
    <string name="key_12key_eisuu_kana">英数カナ</string>
    <string name="key_12key_alphabet_1">.＠ １</string>
    <string name="key_12key_alphabet_2">ABC ２</string>
    <string name="key_12key_alphabet_3">DEF ３</string>
    <string name="key_12key_alphabet_4">GHI ４</string>
    <string name="key_12key_alphabet_5">JKL ５</string>
    <string name="key_12key_alphabet_6">MNO ６</string>
    <string name="key_12key_alphabet_7">PQRS ７</string>
    <string name="key_12key_alphabet_8">TUV ８</string>
    <string name="project_name">项目名称</string>
    <string name="next_step">下一步</string>
    <string name="work">工作</string>
    <string name="configure">配置</string>
    <string name="statistics">统计</string>
    <string name="check_local_serving_status">检测本地服务器状态:</string>
    <string name="serving_port">服务器端口</string>
    <string name="auto_checking">自检中.....</string>
    <string name="tf_serving">TF服务器</string>
    <string name="setting">设置</string>
    <string name="check_project">检测项目</string>
    <string name="input_key_seach">输入关键字搜索</string>
    <string name="check_type">检测类型</string>
    <string name="device_auto_check">设备自检</string>
    <string name="vision_light_system">视觉光源系统</string>
    <string name="data_get_system">数据收集系统</string>
    <string name="plc_control_system">PLC控制系统</string>
    <string name="classify_system">分类动力系统</string>
    <string name="exception_handle">异常处理</string>
    <string name="start_check">开始检测</string>
    <string name="device_exception">设备异常</string>
    <string name="exception_info">异常信息:</string>
    <string name="already_processed">已处理</string>
</resources>