<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".check.DeviceAutoCheckActivity">

    <include layout="@layout/base_opreate_title"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/device_auto_check"
        android:textColor="@color/color_242525"
        android:textSize="@dimen/sp_18" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_10">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vision_light_system"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


        <TextView
            android:id="@+id/tv_vision_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:text="@string/auto_checking"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_get_system"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


        <TextView
            android:id="@+id/tv_data_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:text="@string/auto_checking"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plc_control_system"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


        <TextView
            android:id="@+id/tv_plc_contorl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:text="@string/auto_checking"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classify_system"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


        <TextView
            android:id="@+id/tv_classif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:text="@string/auto_checking"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20">

        <RelativeLayout
            android:id="@+id/rl_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/buttion_shape"
            android:paddingBottom="@dimen/dp_3"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_step"
                android:textColor="@color/ffffff"
                android:textSize="@dimen/sp_15" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_exception_hanle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_120"
            android:background="@drawable/buttion_shape"
            android:paddingBottom="@dimen/dp_3"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exception_handle"
                android:textColor="@color/ffffff"
                android:textSize="@dimen/sp_15" />

        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>