<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/check_project"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_18" />

        <RelativeLayout
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/seach_shape"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/input_key_seach"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@drawable/tab_shape">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mo_text_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/project_name"
                android:textColor="@color/color_242525" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mo_text_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/check_type"
                android:textColor="@color/color_242525" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/start_check"
                android:textColor="@color/color_242525" />
        </RelativeLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcy_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@drawable/tab_list_shape">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>