<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".check.view.activity.OPenMachineCheckActivity">


    <include layout="@layout/base_opreate_title"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_81"
        android:text="@string/check_local_serving_status"
        android:textColor="@color/color_242525"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_41">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_port"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_18" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tf_serving"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_18" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_serving_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_checking"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_18" />


            <TextView
                android:id="@+id/tv_tf_serving_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/auto_checking"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_242525" />

    </RelativeLayout>


</LinearLayout>