<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.busradeniz.detection.view.CenterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/device_exception"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_15" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_15"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/exception_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_exception_info"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_15"
                android:text="移位气缸1限位"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <LinearLayout
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_next_step"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/already_processed"
                android:textColor="@color/color_358fc1"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>