<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".check.view.activity.HomeActivity">

    <include layout="@layout/base_opreate_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_work"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:background="@drawable/my_deveice_right_selector"
                    android:button="@null"
                    android:paddingLeft="@dimen/dp_25"
                    android:paddingRight="@dimen/dp_25"
                    android:text="@string/work"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="@dimen/sp_18" />


                <RadioButton
                    android:id="@+id/rb_configure"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_weight="2"
                    android:background="@drawable/my_deveice_right_selector"
                    android:button="@null"
                    android:paddingLeft="@dimen/dp_25"
                    android:paddingRight="@dimen/dp_25"
                    android:text="@string/configure"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="@dimen/sp_18" />


                <RadioButton
                    android:id="@+id/rb_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_weight="1"
                    android:background="@drawable/my_deveice_right_selector"
                    android:button="@null"
                    android:paddingLeft="@dimen/dp_25"
                    android:paddingRight="@dimen/dp_25"
                    android:text="@string/statistics"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="@dimen/sp_18" />


                <RadioButton
                    android:id="@+id/rb_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_weight="1"
                    android:background="@drawable/my_deveice_right_selector"
                    android:button="@null"
                    android:paddingLeft="@dimen/dp_25"
                    android:paddingRight="@dimen/dp_25"
                    android:text="@string/setting"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="@dimen/sp_18" />

            </RadioGroup>


        </LinearLayout>


        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>


    </LinearLayout>


</LinearLayout>